Added static file paths

--- a/app/templates/uploader/main.html
+++ b/app/templates/uploader/main.html
@@ -1,8 +1,9 @@
 <html>
     <head>
+      {% load static %}
         <title>Recogniser</title>
-        <link rel="stylesheet" href="styles.css">
-        <script src="script.js"></script>
+        <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+        <script src="{% static 'js/script.js' %}"></script>
     </head>
 
 <h2>AI Character Recogniser</h2>
