--- a/app/templates/uploader/homepage.html
+++ b/app/templates/uploader/homepage.html
@@ -2,16 +2,17 @@
 
 <html>
     <head>
+        {% load static %}
         <title>Team Alchemist</title>
-        <link rel="stylesheet" href="home.css">
-        <script src="main.js"></script>
+        <link rel="stylesheet" href="{% static 'css/home.css' %}">
+        <script src="{% static 'js/main.js' %}"></script>
         
     </head>
 
 <div class="hero">
     <nav>
         
-        <img src="logo new.svg" alt="" class="logo">
+        <img src="{% static 'img/logo new.svg' %}" alt="" class="logo">
        
     </nav>
 
@@ -23,7 +24,7 @@
     <div class="text-container">
         <h1>AI <br> Character Recogniser</h1>
         
-        <a href="main.html">Upload Here</a>
+        <a href="{% url 'upload' %}">Upload Here</a>
         <div class="control">       
     </div>
 </div>
