--- a/app/templates/uploader/main.html
+++ b/app/templates/uploader/main.html
@@ -10,7 +10,7 @@
 <p class="lead"><b>by Team Alchemists</b></p>
 
 <!-- Upload  -->
-<form id="file-upload-form" class="uploader">
+<form id="file-upload-form" class="uploader" method="POST" enctype="multipart/form-data">
   <input id="file-upload" type="file" name="fileUpload" accept="image/*" />
 
   <label for="file-upload" id="file-drag">
@@ -19,6 +19,8 @@
       <i class="fa fa-download" aria-hidden="true"></i>
       <div>Select a file or drag here</div>
       <div id="notimage" class="hidden">Please select an image</div>
+      {% csrf_token %}
+      {{ form.as_p }}
       <span id="file-upload-btn" class="btn btn-primary">Select a file</span>
     </div>
     <div id="response" class="hidden">
@@ -29,5 +31,10 @@
     </div>
   </label>
 </form>
+
+{% if img_obj %}
+  <h3>Succesfully uploaded : {{img_obj.title}}</h3>
+  <img src="{{ img_obj.image.url}}" alt="connect" style="max-height:300px">
+{% endif %}
 
 </html>
