--- a/app/templates/uploader/main.html
+++ b/app/templates/uploader/main.html
@@ -30,12 +30,15 @@
   </label>
   {% csrf_token %}
   {{ form.as_p }}
-    <button type="submit">Submit</a>
+    <button type="submit">Submit</button>
 </form>
 
 {% if img_obj %}
   <h3>Succesfully uploaded : {{img_obj.title}}</h3>
-  <img src="{{ img_obj.image.url}}" alt="connect" style="max-height:300px">
+  <img src="{{ img_obj.image.url}}" alt="connect" style="max-height:200px">
+  <br>
+  <br>
+  <a href="{% url 'result' %}"><button>See result</button></a>
 {% endif %}
 
 </html>
