--- a/app/templates/uploader/result.html
+++ b/app/templates/uploader/result.html
@@ -4,11 +4,12 @@
         <title>
             Result
         </title>
-        <link rel="stylesheet" href="{% static 'css/result.css' %}">     
+        <link rel="stylesheet" href="{% static 'css/result.css' %}">  
+        <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>   
     </head>
     <body>
         <div class="context">
-            <h1>The result goes here</h1>
+            <h1>The predicted class is : {{ result }}</h1>
         </div>
     
     
