Updated pages to includes result of prediction

--- a/app/templates/uploader/homepage.html
+++ b/app/templates/uploader/homepage.html
@@ -5,6 +5,7 @@
         {% load static %}
         <title>Team Alchemist</title>
         <link rel="stylesheet" href="{% static 'css/home.css' %}">
+        <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
         <script src="{% static 'js/main.js' %}"></script>
         
     </head>
