--- a/app/templates/uploader/main.html
+++ b/app/templates/uploader/main.html
@@ -13,25 +13,9 @@
 <!-- Upload  -->
 <form id="file-upload-form" class="uploader" method="POST" enctype="multipart/form-data">
   <input id="file-upload" type="file" name="fileUpload" accept="image/*" />
-
-  <label for="file-upload" id="file-drag">
-    <img id="file-image" src="#" alt="Preview" class="hidden">
-    <div id="start">
-      <i class="fa fa-download" aria-hidden="true"></i>
-      <div>Select a file or drag here</div>
-      <div id="notimage" class="hidden">Please select an image</div>
-      <span id="file-upload-btn" class="btn btn-primary">Select a file</span>
-    </div>
-    <div id="response" class="hidden">
-      <div id="messages"></div>
-      <progress class="progress" id="file-progress" value="0">
-        <span>0</span>%
-      </progress>
-    </div>
-  </label>
   {% csrf_token %}
   {{ form.as_p }}
-    <button type="submit" class="btn">Submit</button>
+    <button type="submit" class="btn">Generate Preview</button>
 </form>
 
 {% if img_obj %}
@@ -39,7 +23,7 @@
   <img src="{{ img_obj.image.url}}" alt="connect" style="max-height:200px">
   <br>
   <br>
-  <a href="{% url 'result' %}">See result</a>
+  <a href="{% url 'result' %}"><h3>See result</h3></a>
   <br>
 
 {% endif %}
