--- a/app/templates/uploader/result.html
+++ b/app/templates/uploader/result.html
@@ -5,7 +5,7 @@
             Result
         </title>
         <link rel="stylesheet" href="{% static 'css/result.css' %}">  
-        <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>   
+        <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>   
     </head>
     <body>
         <div class="context">
